# wan-manager

./: README.md  config.yaml  logging.ini  pyproject.toml
wan_manager/: __main__.py  containers.py  dispatcher.py  sabnzbd_client.py
wan_manager/clients/: http_client.py  sabnzbd_client.py
wan_manager/detectors/: detector.py  isp_detector.py
wan_manager/isp/: isp.py  isp_detector.py  starlink.py  zito.py
wan_manager/isps/: isp.py  starlink.py  zito.py
wan_manager/resources/: logging.py
