[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
allow_redefinition = true
exclude = ["tests/"]
pretty = true
show_error_codes = true
show_column_numbers = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true

[tool.poetry]
name = "wan-manager"
version = "0.1.0"
description = "A tool for performing various tasks when the WAN changes"
authors = ["James Roeder <jmaroeder@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
urllib3 = "^2.2.3"
click = "^8.1.7"
dependency-injector = "^4.43.0"
pyyaml = "^6.0.2"
aiohttp = "^3.11.2"
pytest-asyncio = "^0.24.0"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.4"
mypy = "^1.13.0"
pytest = "^8.3.3"

[tool.poetry.scripts]
wan-manager = "wan_manager.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests/"]

[tool.ruff]
extend-exclude = ["tests"]
target-version = "py312"

[tool.ruff.lint]
extend-select = [
    "I",     # isort
    "UP",    # pyupgrade
    "YTT",   # flake8-2020
    "ANN",   # flake8-annotations
    "BLE",   # flake8-blind-except
    "FBT",   # flake8-boolean-trap
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "C4",    # flake8-comprehensions
    "PIE",   # flake8-pie
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SLOT",  # flake8-slots
    "SIM",   # flake8-simplify
    "I",     # flake8-tidy-imports
    "TCH",   # flake8-type-checking
    "ARG",   # flake8-unused-arguments
    "PGH",   # pygrep-hooks
    "PL",    # Pylint
    "TRY",   # tryceratops
    "FLY",   # flynt
    "PERF",  # Perflint
    # "FURB",  # refurb (in preview)
    "RUF",   # Ruff-specific rules
]
ignore = [
    "ANN101",  # missing-return-type-undocumented-public-function
]
ignore-init-module-imports = true

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
mypy-init-return = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
exempt-modules = ["typing", "typing_extensions"]

[tool.ruff.lint.isort]
# known-first-party = ["wan_manager"]  # FIX HERE
